--- a/nextgisweb/webmap/amd/ngw-webmap/template/ExtentWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ExtentWidget.hbs
@@ -1,7 +1,7 @@
 <div data-dojo-type="${baseClass}" data-dojo-attach-point="focusNode" data-ngw-serialize-prefix="${serializePrefix}"
     class="padding-block">
-    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 2, labelWidth: 150" class="starting-extent" >
-        <label>{{gettext 'Starting extent'}}</label>
+    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 2,  customClass:'settings-extent'" >
+        <label class="label-settings">{{gettext 'Starting extent'}}</label>
         <div data-dojo-attach-point="wExtentLeft" data-dojo-type="dijit/form/NumberTextBox"
             data-dojo-props="constraints: {min: -180, max: +180}, trim: true" title="{{gettext 'Left, deg.'}}"
             style="width: 100%"></div>
@@ -18,27 +18,57 @@
             data-dojo-props="constraints: {min: -90, max: +90}, trim: true" title="{{gettext 'Bottom, deg.'}}"
             style="width: 100%"></div>
     </div>
-    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 2, labelWidth: 'auto'" class="starting-layer-extent">
+    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 1, customClass:'settings-extent-layer'" >
         <div data-dojo-type="dijit/form/Button" data-dojo-attach-point="btnSetExtentFromLayer"
             data-dojo-props="iconClass: 'dijitIconNewTask', showLabel: false">
             {{gettext 'Set starting extent from layer'}}
-
             <div data-dojo-type="ngw-resource/ResourcePicker" data-dojo-attach-point="layerPicker"
-                data-dojo-props="interface: 'IBboxLayer', dialogTitle: {{gettextString 'Select layer'}}">
-            </div>
+                data-dojo-props="interface: 'IBboxLayer', dialogTitle: {{gettextString 'Select layer'}}"></div>
         </div>
+
+        <div data-dojo-attach-point="wLayerExtentId" data-dojo-type="ngw-resource/form/ResourceLink" style="width: 100%"
+            title="{{gettext 'Resource layer'}}"></div>
+
+        <div data-dojo-type="dijit/form/Button" data-dojo-attach-point="btnClearExtent"
+            data-dojo-props="iconClass: 'dijitIconClear', showLabel: false">{{gettext 'Clear extent'}}</div>
     </div>
-    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 1, labelWidth: 'auto'" class="starting-layer-extent">
+
+
+    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 2,  customClass:'settings-extent'" >
+        <label class="label-settings">{{gettext 'Fixed extent by layer'}}</label>
+        <div data-dojo-attach-point="wExtentLeftConst" data-dojo-type="dijit/form/NumberTextBox"
+            data-dojo-props="constraints: {min: -180, max: +180}, trim: true" title="{{gettext 'Left, deg.'}}"
+            style="width: 100%"></div>
+
+        <div data-dojo-attach-point="wExtentTopConst" data-dojo-type="dijit/form/NumberTextBox"
+            data-dojo-props="constraints: {min: -90, max: +90}, trim: true" title="{{gettext 'Top, deg.'}}"
+            style="width: 100%"></div>
+
+        <div data-dojo-attach-point="wExtentRightConst" data-dojo-type="dijit/form/NumberTextBox"
+            data-dojo-props="constraints: {min: -180, max: +180}, trim: true" title="{{gettext 'Right, deg.'}}"
+            style="width: 100%"></div>
+
+        <div data-dojo-attach-point="wExtentBottomConst" data-dojo-type="dijit/form/NumberTextBox"
+            data-dojo-props="constraints: {min: -90, max: +90}, trim: true" title="{{gettext 'Bottom, deg.'}}"
+            style="width: 100%"></div>
+    </div>
+
+    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 1,  customClass:'settings-extent-layer'">
         <div data-dojo-type="dijit/form/Button" data-dojo-attach-point="btnSetConstrainingExtent"
             data-dojo-props="iconClass: 'dijitIconNewTask', showLabel: false">
             {{gettext 'Set constraining extent'}}
-
             <div data-dojo-type="ngw-resource/ResourcePicker" data-dojo-attach-point="layerPickerSS"
-                data-dojo-props="interface: 'IBboxLayer', dialogTitle: {{gettextString 'Select layer'}}">
-            </div>
+                data-dojo-props="interface: 'IBboxLayer', dialogTitle: {{gettextString 'Select layer'}}"></div>
         </div>
+
+        <div data-dojo-attach-point="wLayerExtentConstId" data-dojo-type="ngw-resource/form/ResourceLink"
+            style="width: 100%" title="{{gettext 'Resource layer'}}"></div>
+
+        <div data-dojo-type="dijit/form/Button" data-dojo-attach-point="btnClearExtentConst"
+            data-dojo-props="iconClass: 'dijitIconClear', showLabel: false">{{gettext 'Clear extent'}}</div>
     </div>
-    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 2, labelWidth: 150">
+
+    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 1,  customClass:'settings-extent-layer'">
         <div data-dojo-type="ngw-resource/ResourceBox"
             data-dojo-props="interface: 'IFeatureLayer', colspan: 2, dialogTitle: {{gettextString 'Select vector layer'}}"
             data-ngw-serialize="bookmark_resource" title="{{gettext 'Bookmark resource'}}" style="width: 100%">
