Creating Foreign Key Relationships

--- a/nextgisweb/resource/nodepkg/children-section/ChildrenSection.less
+++ b/nextgisweb/resource/nodepkg/children-section/ChildrenSection.less
@@ -36,6 +36,18 @@
             }
         }
 
+        .iconColumnKeyTitle{
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .columnKey {
+            display: flex;
+            justify-content: center;
+            .iconColumnKey {
+                font-size: 18px;
+            }
+        }
+
         .actions, .volume {
             text-align: right !important;
         }
@@ -58,4 +70,8 @@
         }
 
     }
+}
+
+.ant-tooltip {
+    pointer-events: none !important;
 }
