--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -1,73 +1,27 @@
 .ngw-webmap-layers-tree {
-    .ant-tree-treenode {
-        padding: 0;
-    }
-
-    &:not(.ant-tree-show-line) .ant-tree-switcher-noop {
-        width: 6px;
-    }
-
-    &.ant-tree-show-line {
-        .ant-tree-indent-unit {
-            width: 18px;
-
-            &::before {
-                right: 6px;
-            }
-        }
-    }
-
-    .ant-tree-switcher-line-icon {
-        vertical-align: -0.3em;
-    }
-
     .ant-tree-checkbox {
-        margin-top: 8px;
-        margin-right: 6px;
-
-        .ant-tree-checkbox-inner {
-            width: 12px;
-            height: 12px;
-        }
-    }
-
-    .ant-tree-checkbox-checked > .ant-tree-checkbox-inner::after {
-        width: 4px;
-        height: 6px;
-        left: 25%;
-    }
-
-    .ant-tree-checkbox-indeterminate > .ant-tree-checkbox-inner::after {
-        width: 6px;
-        height: 6px;
+        margin: 0px 0 0px 0;
+        display: flex;
+        align-items: center;
     }
 
     .ant-tree-node-content-wrapper {
         display: flex;
-        align-items: start;
-        column-gap: 6px;
         width: 100%;
         min-width: 0;
-        padding-left: 0;
-        line-height: 28px;
-
-        .ant-row {
-            margin: 0;
-        }
+        align-items: center;
 
         &.ant-tree-node-selected {
-            background-color: transparent;
+            background-color: #ffffff00;
+        }
+
+        &:hover {
+            background: #ffffff00;
         }
 
         .ant-tree-icon__customize {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            height: 28px;
-            width: auto;
-
             img {
-                display: block;
+                vertical-align: text-top;
             }
         }
 
@@ -88,20 +42,6 @@
                 justify-content: end;
             }
 
-            .more,
-            .legend {
-                width: 24px;
-                height: 24px;
-                display: flex;
-                justify-items: center;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50%;
-
-                &:hover {
-                    background: #076dbf21;
-                }
-            }
         }
     }
 }
@@ -112,6 +52,70 @@
         flex-wrap: nowrap;
         justify-content: flex-start;
         gap: 5px;
-        align-items: baseline;
+        align-items: center;
+    }
+}
+
+.ant-tree .ant-tree-node-content-wrapper .ant-tree-iconEle {
+    font-size: 24px;
+    color: #106a90;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    margin: 0 6px;
+}
+
+
+.icon-not-active {
+    background-color: #00000000 !important;
+    cursor: auto;
+}
+
+.titleName {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    white-space: nowrap;
+    padding: 2px;
+    font-size: small;
+    &:hover {
+        background: rgba(247, 247, 247, 1);
+        padding: 2px;
+        border-radius: 3px;
+    }
+}
+
+.ant-tree .ant-tree-treenode {
+    align-items: center;
+    display: flex;
+    outline: none;
+    padding: 0;
+    margin: 5px 0;
+}
+
+.iconCustom {
+    display: flex;
+    align-items: center;
+    padding: 0 4px;
+}
+
+.more,
+.legend {
+    font-size: 18px;
+    color: #106a90;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto;
+    &:hover {
+        background: #ececec;
+        border-radius: 3px;
+        color: #000000;
     }
 }
