--- a/nextgisweb/pyramid/nodepkg/layout/Menu.less
+++ b/nextgisweb/pyramid/nodepkg/layout/Menu.less
@@ -2,21 +2,21 @@
     display: inline-block;
     position: relative;
     vertical-align: middle;
-    width: 34px;
-    height: 34px;
-    line-height: 34px;
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
     border-radius: 2px;
-    color: var(--primary);
+    color: #ffffff;
     text-align: center;
     cursor: pointer;
 
     > svg.icon {
-        font-size: 32px;
+        font-size: 24px;
         color: inherit;
     }
 
     > span.main {
-        line-height: 34px;
+        line-height: 24px;
         color: inherit;
     }
 
@@ -44,11 +44,13 @@
 
 .ngw-pyramid-menu-drawer {
     .ant-drawer-header {
-        padding: 16px 12px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.04);
-
+        padding: 11px 0px;
+        height: 40px;
+        border-bottom: none;
+        
         .ant-drawer-header-title .ant-drawer-close {
             margin-left: auto;
+            margin-right: 6px;
         }
     }
 
