--- a/nextgisweb/static/css/blocks/_tables.less
+++ b/nextgisweb/static/css/blocks/_tables.less
@@ -146,7 +146,7 @@ table.data tr th, table.data tr td { padding: 0.2ex 0.5ex; }
 .table-keyvalue__value__inner {
   position: relative;
   top: 4px;
-  background-color: var(--bg-base);
+  background-color: #ffffff00;
 }
 
 .content-box {
