--- a/nextgisweb/static/css/settings/_variables.less
+++ b/nextgisweb/static/css/settings/_variables.less
@@ -10,7 +10,7 @@
 @light-text-2: #777;
 @text-muted: #808A93;
 
-@blue: #076dbf;
+@blue: #106a90;
 @darkBlue: #036997;
 @lightBlue: #e5eef7;
 @lightBlue-2: #EEF4F7;
