--- a/nextgisweb/pyramid/amd/ngw-pyramid/dynamic-panel/DynamicPanel.css
+++ b/nextgisweb/pyramid/amd/ngw-pyramid/dynamic-panel/DynamicPanel.css
@@ -15,9 +15,9 @@
         top:0;
         left:0;
         width: 100%;
-        height: 40px;
+        height: 32px;
         padding: 0 16px;
-        line-height: 40px;
+        line-height: 32px;
         border-bottom: 1px solid rgba(0,0,0,.12);
         box-sizing: border-box;
         font-family: 'lato_local', 'Roboto', sans-serif;
@@ -27,7 +27,7 @@
 
     .dynamic-panel__content{
         position: absolute;
-        top: 40px;
+        top: 32px;
         bottom:0;
         left:0;
         width: 100%;
@@ -37,7 +37,8 @@
 
     .dynamic-panel__closer{
         position: absolute;
-        right: 8px;
+        right: 4px;
+        top: -2px;
         z-index: 10;
         cursor: pointer;
     }
@@ -49,7 +50,7 @@
     .dynamic-panel__loader{
         display: none;
         position: absolute;
-        top: 40px;
+        top: 32px;
         bottom:0;
         width: 100%;
         background-color: rgba(255,255,255,.68);
@@ -59,7 +60,7 @@
         width: 48px;
         height: 48px;
         position: absolute;
-        top:0;
+        top:55px;
         bottom:0;
         left: 0;
         right: 0;
@@ -67,9 +68,9 @@
     }
 
 .dynamic-panel--notitle > .dynamic-panel__title{
-    display: none;
+    display: block;
 }
 
 .dynamic-panel--notitle .dynamic-panel__content{
-    top:0;
+    top:0px;
 }
