--- a/nextgisweb/pyramid/nodepkg/layout/Avatar.less
+++ b/nextgisweb/pyramid/nodepkg/layout/Avatar.less
@@ -5,12 +5,12 @@
     &-label {
         display: inline-block;
         vertical-align: middle;
-        width: 34px;
-        height: 34px;
-        line-height: 34px;
+        width: 24px;
+        height: 24px;
+        line-height: 24px;
         border-radius: 2px;
-        color: var(--user-avatar-text, var(--on-primary-text));
-        background: var(--user-avatar-bg, var(--primary));
+        color: #106a90;
+        background-color: #ffffff;
         text-align: center;
     }
 }
