--- a/nextgisweb/webmap/amd/ngw-webmap/template/resources/Display.css
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/resources/Display.css
@@ -1,8 +1,8 @@
-body, html { width: 100%; height: 100%; margin:0; padding: 0; overflow: hidden; }
+body, html { width: 100%; height: 100%; margin:0; padding: 0; overflow: hidden; position: absolute;}
 
 .webmap-wrapper{
     position: fixed;
-    top: 51px;
+    top: 40px;
     bottom: 0;
     width: 100%;
 }
@@ -215,5 +215,44 @@ body, html { width: 100%; height: 100%; margin:0; padding: 0; overflow: hidden; 
 
 .leftPanelPane--fullwidth {
     box-sizing: border-box;
-    width: calc(100% - 50px) !important;
+    width: calc(100% - 40px) !important;
+}
+
+.customlink {
+    position: absolute;
+    z-index: 2;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.resourceblock {
+    bottom: 80px;
+}
+
+.infoblock {
+    bottom: 0px;
+}
+
+.updateblock {
+    bottom: 40px;
+}
+
+.infoMap > a svg.icon {
+    color: #87b4c7;
+    font-size: 24px;
+}
+
+.infoMap > a svg.icon:hover {
+    color: rgb(255, 255, 255);
+    font-size: 24px;
+}
+
+.nextgis.claro .dijitButton--s .dijitButtonNode {
+    height: 32px;
+    line-height: 32px;
+    padding-left: 12px;
+    padding-right: 12px;
 }
