--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -107,3 +107,31 @@
         align-items: baseline;
     }
 }
+
+.colNot {
+    font-size: 18px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto;
+    cursor: auto;
+}
+
+.colIconLegend {
+    // font-size: 18px;
+    // width: 24px;
+    // height: 24px;
+    // display: flex;
+    // justify-items: center;
+    // justify-content: center;
+    // align-items: center;
+    margin: 0;
+  
+    &:hover {
+      background: #1d405e34;
+      border-radius: 3px;
+    }
+  }
