Updating the layer tree and legend

--- a/nextgisweb/webmap/nodepkg/layers-tree/DropdownActions.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/DropdownActions.less
@@ -1,8 +1,27 @@
 .dropdown-content {
-    background: #fff;
-    box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px 0 rgb(0 0 0 / 8%),
-      0 9px 28px 8px rgb(0 0 0 / 5%);
-  }
+  background: #fff;
+  box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
+  // border: 0.05em solid #02223c2b;
+}
   .dropdown-content .ant-dropdown-menu {
     box-shadow: none;
+    border-radius: 3px;
   }
+
+.dropdown-content {
+  border-radius: 3px;
+}
+
+.iconSize {
+  font-size: 18px;
+  color: #106a90;
+}
+
+.customStyle {
+  .ant-dropdown-menu-item, .ant-dropdown-menu-submenu-title {
+    padding: 3px 6px;
+  }
+  .ant-space-vertical {
+    padding: 0px 6px !important;
+}
+}
