Attached web map files for layers, translation of some system components

--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -229,7 +229,7 @@ a[class*=" icon-"]:hover:before {
 
   .header__title {
     position: relative;
-    top: -1px;
+    top: 0;
     display: flex;
     align-items: center;
     color: inherit;
