Additional buttons on the web map, add footer

--- a/nextgisweb/resource/nodepkg/resources-filter/ResourcesFilter.less
+++ b/nextgisweb/resource/nodepkg/resources-filter/ResourcesFilter.less
@@ -8,3 +8,23 @@
         text-overflow: ellipsis;
     }
 }
+
+.ant-input {
+    border: 0px solid #d9d9d9;
+}
+
+.ant-btn {
+    border: 0px solid #d9d9d9;
+}
+
+.ant-input-search-button {
+    height: 30px;
+}
+
+.ant-input-group .ant-input {
+    height: 30px;
+}
+
+.ant-input-group-addon {
+    background-color: #ffffff;
+}
