Updating the resource description, creating a component in React JS

--- a/nextgisweb/pyramid/amd/ngw-pyramid/dynamic-panel/DynamicPanel.css
+++ b/nextgisweb/pyramid/amd/ngw-pyramid/dynamic-panel/DynamicPanel.css
@@ -71,6 +71,6 @@
     display: block;
 }
 
-.dynamic-panel--notitle .dynamic-panel__content{
+/* .dynamic-panel--notitle .dynamic-panel__content{
     top:0px;
-}
+} */
