Refinement of the display of the general description, style description and layer on the web map

--- a/nextgisweb/webmap/nodepkg/layers-tree/ParseDesc.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/ParseDesc.less
@@ -1,14 +1,14 @@
-.styleTitle {
-    display: flex;
-    clear: both;
-    cursor: pointer;
-    font-size: 12px;
-    line-height: 12px;
-    margin: 0;
-    padding: 0;
-    transition: all 0.3s;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    color: rgba(0,0,0,.45);
-  }
+.tileDesc {
+  display: flex;
+  clear: both;
+  cursor: pointer;
+  font-size: 12px;
+  line-height: 12px;
+  margin: 0;
+  padding: 0;
+  transition: all 0.3s;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  color: rgba(0, 0, 0, .45);
+}
