--- a/nextgisweb/webmap/nodepkg/map-desc/MapDesc.less
+++ b/nextgisweb/webmap/nodepkg/map-desc/MapDesc.less
@@ -1,4 +1,4 @@
-.descItem{
+.descItemMap{
     width: 100%;
     padding: 5px;
     span {
@@ -7,11 +7,5 @@
     }
     a {
         color: #106a90;
-    }
-
-    .imgDesc {
-        max-width: 128px;
-        display: flex;
-        justify-content: flex-start;
     }
 }
