--- a/nextgisweb/webmap/nodepkg/layers-tree/ParseDesc.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/ParseDesc.less
@@ -1,14 +1,32 @@
 .titleDesc {
-  display: flex;
-  clear: both;
-  cursor: pointer;
-  font-size: 12px;
-  line-height: 12px;
-  margin: 0;
-  padding: 0;
-  transition: all 0.3s;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  color: rgba(0, 0, 0, .45);
+  color: rgba(0, 0, 0, 0.75);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.resource-link {
+  padding: 0 0 0 10px;
+}
+
+.ant-tabs-bottom>.ant-tabs-nav, .ant-tabs-bottom>div>.ant-tabs-nav, .ant-tabs-top>.ant-tabs-nav, .ant-tabs-top>div>.ant-tabs-nav {
+  margin: 0 0 5px;
+}
+
+.ant-tabs-content-holder {
+  flex: auto;
+  min-height: 0;
+  min-width: 0;
+  padding: 5px;
+  overflow: auto;
+  max-height: calc(100vh - 128px);
+  cursor: text;
+}
+
+.ant-tabs-card>.ant-tabs-nav .ant-tabs-tab, .ant-tabs-card>div>.ant-tabs-nav .ant-tabs-tab {
+  padding: 5px;
+}
+
+.ant-tabs-top > .ant-tabs-nav {
+  margin: 0 0 5px;
 }
