--- a/nextgisweb/webmap/nodepkg/geom-loading/GeomLoading.less
+++ b/nextgisweb/webmap/nodepkg/geom-loading/GeomLoading.less
@@ -3,6 +3,8 @@
     display: flex;
     height: fit-content;
     align-items: center;
+    margin: 5px;
+    width: auto;
 }
 
 .ant-upload.ant-upload-drag p.ant-upload-drag-icon .anticon {
@@ -67,4 +69,30 @@
             color: #000000;
         }
     }    
+}
+
+.delete-all-layer {
+    display: flex;
+    margin: 5px;
+    justify-content: flex-end;
+    font-size: 12px;
+}
+
+.ant-card-small>.ant-card-body {
+    padding: 3px;
+}
+
+.ant-card-small>.ant-card-head {
+    font-size: 14px;
+    min-height: 24px;
+    padding: 0 6px;
+}
+
+.ant-card-small>.ant-card-head>.ant-card-head-wrapper>.ant-card-extra {
+    font-size: 14px;
+    padding: 2px 0;
+}
+
+.ant-card-small>.ant-card-head>.ant-card-head-wrapper>.ant-card-head-title {
+    padding: 2px 0;
 }
