Dropdown list and tabs for metrics

--- a/nextgisweb/pyramid/nodepkg/metric/MetricAnalytics.less
+++ b/nextgisweb/pyramid/nodepkg/metric/MetricAnalytics.less
@@ -1,5 +1,22 @@
-.ant-checkbox-group {
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
+.ant-tabs-extra-content {
+  flex: none;
+  margin: 0 0 0 16px;
+}
+
+.ant-tabs-extra-content {
+  flex: none;
+  margin: 0;
+}
+
+.ant-tabs-card>.ant-tabs-nav .ant-tabs-tab, .ant-tabs-card>div>.ant-tabs-nav .ant-tabs-tab {
+  padding: 5px 10px;
+}
+
+.input-counter-id{
+  margin: 0px 0 16px 0;
+}
+
+.input-checkbox {
+  display: flex;
+  align-items: center;
 }
