--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -46,6 +46,7 @@ div.dijitTabPane {
   src: url('@{node_modules}/@fontsource/roboto/files/roboto-all-400-normal.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -53,6 +54,7 @@ div.dijitTabPane {
   src: url('@{node_modules}/@fontsource/roboto/files/roboto-all-700-normal.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -62,6 +64,7 @@ div.dijitTabPane {
     url('@{node_modules}/lato-font/fonts/lato-normal/lato-normal.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -71,6 +74,7 @@ div.dijitTabPane {
     url('@{node_modules}/lato-font/fonts/lato-bold/lato-bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 
@@ -165,10 +169,11 @@ a[class*=" icon-"]:hover:before {
   position: relative;
   min-height: 100%;
   min-width: @min-width;
+  position: relative;
 }
 
 .title {
-  padding: 40px 0 24px;
+  padding: 40px 0 10px;
 
   h1, h2, h3 {
     margin: 0;
@@ -198,29 +203,26 @@ a[class*=" icon-"]:hover:before {
 /* -- Header --*/
 
 .header {
+  background-color: #106a90;
+  color: #fff;
+  height: 40px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   position: relative;
-  box-sizing: border-box;
-  padding: 12px 12px 12px 0;
-  background-color: var(--header-bg);
   z-index: 10;
-  line-height: 1.5;
-  font-size: 15px;
-  font-family: var(--heading-font-family), 'lato_local', sans-serif;
-  color: var(--on-header-text);
+  padding: 0 10px 0 0;
 
-  &::after{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 1px;
-    background-color: currentColor;
-    opacity: var(--divider-opacity);
-  }
+  // &::after{
+  //   content: '';
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0;
+  //   height: 1px;
+  //   background-color: currentColor;
+  //   opacity: var(--divider-opacity);
+  // }
 
   a {
     text-decoration: none;
@@ -229,7 +231,7 @@ a[class*=" icon-"]:hover:before {
 
   .header__title {
     position: relative;
-    top: -1px;
+    top: 0;
     display: flex;
     align-items: center;
     color: inherit;
@@ -242,7 +244,7 @@ a[class*=" icon-"]:hover:before {
 }
 
 .header-nav {
-  margin: -9px 0;
+  margin: 0;
   list-style-type: none;
   padding: 0;
   font-weight: var(--heading-font-weight);
@@ -253,8 +255,8 @@ a[class*=" icon-"]:hover:before {
     vertical-align: middle;
     margin-left: 12px;
     margin-top: auto;
-    height: 34px;
-    line-height: 34px;
+    // height: 34px;
+    // line-height: 34px;
     margin-bottom: auto;
     white-space: normal;
 
@@ -264,7 +266,7 @@ a[class*=" icon-"]:hover:before {
 
     .header-resources-filter {
       width: 180px;
-      margin-top: 1px;
+      margin-top: 0;
 
       @media (min-width: 992px) {
         width: 290px;
@@ -289,8 +291,8 @@ a[class*=" icon-"]:hover:before {
 
 .header__title-logo {
   position: relative;
-  min-width: 50px;
-  padding: 6px 12px;
+  min-width: 40px;
+  padding: 4px;
   box-sizing: border-box;
 
   &:after{
@@ -299,8 +301,8 @@ a[class*=" icon-"]:hover:before {
     right: 0;
     top: 0;
     bottom: 0;
-    background-color: currentColor;
-    opacity: var(--divider-opacity);
+    // background-color: currentColor;
+    // opacity: var(--divider-opacity);
     width: 1px;
     height: 100%;
     min-height: 34px;
@@ -316,14 +318,23 @@ a[class*=" icon-"]:hover:before {
 
 .logo__pic {
   display: block;
-  margin: -6px auto;
+  width: 32px;
+  height: 32px;
 }
 
 .header__title__inner {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  line-height: 1.4;
+  margin: 0;
+  overflow: hidden;
+  padding-bottom: 4px;
   padding-left: 16px;
   padding-top: 4px;
-  padding-bottom: 4px;
-  line-height: 1.2;
+  font-size: 15px;
+  font-family: var(--heading-font-family), 'lato_local', sans-serif;
+  color: white;
 }
 
 
@@ -387,10 +398,10 @@ a[class*=" icon-"]:hover:before {
 
 /* -- CONTENT STYLES -- */
 .content {
+  margin-top: 0;
+  padding: 0;
   display: flex;
-  flex-flow: row wrap;
-  align-content: flex-start;
-  padding-bottom: 30px;
+
 
   & > .content__inner {
     display: inline-block;
@@ -422,9 +433,9 @@ a[class*=" icon-"]:hover:before {
 }
 
 .content__container {
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 100%;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .maxwidth .content__container {
@@ -523,6 +534,10 @@ a[class*=" icon-"]:hover:before {
   margin-bottom: 24px;
 }
 
+.content-box img {
+  max-width: 100%;
+}
+
 /* Sidebar */
 
 .sidebar {
@@ -618,8 +633,8 @@ a[class*=" icon-"]:hover:before {
 
 /*-- Breadcrumbs --*/
 .path {
-  margin-bottom: 5px;
-  margin-top: -25px;
+  margin-bottom: 15px;
+  margin-top: -15px;
 }
 
 .path__item {
@@ -676,3 +691,52 @@ a[class*=" icon-"]:hover:before {
 @import (css) "@{node_modules}/dgrid/css/skins/claro.css";
 
 @import "override-claro";
+
+.maplist_link {
+  transition: background-color 0.5s;
+}
+
+.maplist_link:hover {
+  background-color: var(--secondary);
+}
+
+
+
+.footer {
+  align-items: center;
+  background-color: #106a90;
+  bottom: 0;
+  color: #fff;
+  display: flex;
+  font-size: 14px;
+  // font-weight: 600;
+  height: 30px;
+  justify-content: center;
+  margin-top: 0;
+  position: relative;
+  text-align: center;
+  width: 100%;
+  z-index: 0;
+}
+
+.parentDescClass {
+  overflow: auto !important;
+}
+div.descClass img {
+  max-width: 100%;
+}
+
+.nextgis.claro .dijitTabContainerTop-tabs .dijitTab {
+  top: 0;
+  border-top: 1px solid transparent;
+  margin-bottom: 0;
+  font-size: 13px;
+  height: 26px;
+  line-height: 24px;
+  font-variant: unset;
+}
+
+.claro .dijitTabListContainer-top .tabStripButton {
+  margin-top: 1px !important;
+  padding: 4px 3px;
+}
