--- a/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
@@ -1,10 +1,31 @@
-.ngw-webmap-description-panel {
+.ngw-webmap-description-panel{
+ 
+    span {
+        display: block;
+        overflow-wrap: break-word;
+    }
+    a {
+        color: #106a90;
+    }
     > button.ngw-webmap-close-button {
         float: right;
         margin: 2px;
     }
-
-    > .content {
-        padding: 16px;
+    .imgDesc {
+        height: auto;
+    }
+    .image {
+        display: block;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+        margin-inline-start: 5px;
+        margin-inline-end: 5px;
+    }
+    p {
+        display: block;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+        margin-inline-start: 5px;
+        margin-inline-end: 5px;
     }
 }
