style css update

--- a/nextgisweb/pyramid/nodepkg/layout/Avatar.less
+++ b/nextgisweb/pyramid/nodepkg/layout/Avatar.less
@@ -3,8 +3,8 @@
     user-select: none;
 
     > a {
-        font-size: 16px;
-        font-weight: bold;
+        font-size: 14px;
+        font-weight: 500;
         text-decoration: none;
     }
 
@@ -34,7 +34,7 @@
 .ngw-pyramid-avatar-popover {
     .ant-popover-title {
         padding: 6px 12px;
-        font-weight: bold;
+        font-weight: 500;
     }
 
     .ant-popover-inner-content {
