--- a/nextgisweb/static/css/variables.less
+++ b/nextgisweb/static/css/variables.less
@@ -1,7 +1,7 @@
 :root {
     // Colors
     --primary: #106a90;
-    --secondary: #A1C5D4;
+    --secondary: #e5eef7;
     --accent: #00c775;
     --danger: #f44336;
     --error: #f44336;
