--- a/nextgisweb/resource/nodepkg/map_list/details.less
+++ b/nextgisweb/resource/nodepkg/map_list/details.less
@@ -9,10 +9,10 @@ details summary:after {
     border-radius: 0.05em;
     content: "";
     display: inline-block;
-    height: 10px;
+    height: 8px;
     margin: 0px 0px 0px 5px;
     transform: rotate(-45deg);
-    width: 10px;
+    width: 8px;
 }
 details summary::-webkit-details-marker,
 details summary::marker, details::marker {
@@ -28,12 +28,14 @@ summary {
     display: flex;
     border: 0.005em solid #39464e26;
     border-radius: 3px;
-    padding: 4px 10px 4px 10px;
+    padding: 4px 4px 4px 10px;
     box-shadow: 0 1px 2px #39464e26;
     cursor: pointer;
     background-color: white;
     align-items: center;
     align-content: center;
+    flex-direction: row-reverse;
+    justify-content: space-between;
 }
 
 .blockGroup {
@@ -42,4 +44,19 @@ summary {
     display: flex;
     height: 21px;
     align-items: center;
+}
+
+.mapsTitle {
+    display: flex;
+    width: 100%;
+    margin: 0 0 0 16px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.mapsTitle-child {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
 }
